# log635-3

./: .gitignore  CMakeLists.txt  Correction-Dataset.csv  Correction-Evaluations.csv  Evaluations.csv  compile_commands.json  data.csv  data3.csv  layer.h  main.cpp  neuron.h  nn.cpp  nn.h
